# EnKF-Soft-Sensing

./: .gitignore  JPC_NSD_softsensing.ipynb  README.md  pyproject.toml  scratch_alpha.out  scratch_alpha2.out
data/raw/: P1.xlsx  P2.xlsx  P3.xlsx  P4.xlsx
docs/: final_parameters.md  tuning_log.md  tuning_strategy.md
nsd_enkf/: __init__.py  analysis.py  config.py  data_loader.py  enkf.py  io_utils.py  model.py  plotting.py
results/: README.md
results/cv_tuning/: tune_cv_checkpoint.json
results_asn_alpha0.01/: README.md
results_legacy/: README.md
results_legacy/cross_validation/: comparison.json
results_multirun_ensemble_size/: README.md  seed_selection.json
results_multirun_nsd/: README.md
results_multirun_nsd/fold_P2/: seed_selection.json
results_multirun_nsd/fold_P3/: seed_selection.json
results_multirun_validation/: README.md  summary.json
results_single_sweep/: README.md  picks.json
results_v1/: picks.json
scripts/: 01_run_enkf.py  01_tune_cv.py  02_tune_alpha_asn.py  02_uncertainty_figures.py  03_ensemble_diagnostics.py  03_tune_alpha_nsd.py  04_cross_validate.py  04_ensemble_uncertainty_profiles.py  05_ensemble_size.py  06_observability_gramian.py  07_crossval_figure.py  ensemble_size_sensitivity.py  plot_alpha_check.py  plot_alpha_compare.py  plot_cross_validation.py  plot_maintext_cv.py  plot_p4_maintext.py  plot_results.py  plot_v1_sweeps.py  run_enkf.py  run_option_b.py  sweep_alpha_nsd_multiseed.py  test_asn_alpha_on_nsd.py  tune_alpha.py  tune_alpha_asn.py  tune_alpha_nsd.py  tune_covariances.py  tune_cv.py  validate_multiseed.py
(+17 files in other folders)
